add cart-item component

--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -13,8 +13,8 @@
   z-index: 5;
 
   .cart-items {
-    height: 24rem;
-    display: flex;
+    height: 35rem;
+    //display: flex;
     flex-direction: row;
     overflow: scroll;
     &::-webkit-scrollbar {
